--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,24 +8,64 @@ html{
     scroll-behavior: smooth;
 }
 :root{
-    --textcolor: #585858;
+    --textcolor: #000;
     --bground-1: #ebebeb;
     --hovercolor: rgb(209, 202, 202);
+    --scrollcolor: #000;
+}
+.dark-mode{
+    --textcolor: #d8d8d8;
+    --bground-1: #000;
+    --scrollcolor: #ebebeb;
+
 }
 a{
     text-decoration: none;
     list-style: none;
 }
 body{
+    color: var(--textcolor);
     font-size: 16px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-family: 'Fira Code', monospace;
     font-weight: 600;
     background: var(--bground-1);
+    animation: transitionIn 0.75s;
 }
+ /* animação ao body */
+@keyframes transitionIn {
+    
+    from{
+        opacity: 0;
+        transform: translateY(-10px);
+        /*transform: rotateX(-10deg);*/
+    }
+
+    to{
+        opacity: 1;
+        transform: translateY(0);
+        /*transform: rotateX(0);*/
+    }
+}
+/* Barra de rolagem */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--scrollcolor);
+    border-radius: 8px;
+  }
 header{
     width: 100%;
     padding: 30px;
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
 header i{
     font-size: 18px;
@@ -35,8 +75,16 @@ header a:hover{
     transition: 0.60s ease;
 }
 header .logo-name{
-    color: #000;
+    color: var(--textcolor);
     text-decoration: none;
+}
+header .list-links #dark-mode{
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+}
+header .return{
+    color: var(--textcolor);
 }
 /* estilo slides*/
 #sliders{
@@ -89,13 +137,14 @@ header .logo-name{
     transition: 0.3s ease;
 }
 .second-header a:hover{
-    color: #222;
+    color: var(--hovercolor);
 }
 /* discover */
 
 #discover{
     width: 100%;
     height: auto;
+    margin-bottom: 50px;
     padding: 10px 30px;
     display: flex;
     align-items: center;
@@ -141,29 +190,26 @@ header .logo-name{
     line-height: 30px;
     width: 180px;
     height: 30px;
+    border: 1px solid var(--hovercolor);
+    border-radius: 5px;
+    cursor: pointer;
     transition: 0.60s ease;
+}
+.viewMore:hover{
+    background-color: var(--hovercolor);
 }
 /* icon hover effect */
 
 .social-media i{
     font-size: 30px;
     font-weight: 600;
-    color: #000;
+    color: var(--textcolor);
 }
 .social-media i:hover{
     color: var(--hovercolor);
     transition: 0.60s;
 }
-lord-icon{
-    cursor: pointer;
-}
 /* bio contato*/
-.return{
-    color: #000;
-    font-size: 15px;
-    display: flex;
-    align-items: center;
-}
 #bio, #contato{
     width: 100%;
     height: 100vh;
@@ -218,6 +264,15 @@ lord-icon{
     color: #000;
     font-size: 30px;
 }
+#carregando{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    background: #000 url('../../vetor/icons/carregar.gif') no-repeat center center;
+    background-size: 30%;
+    overflow: hidden;
+    z-index: 100;
+}
 footer{
     font-size: 14px;
     font-family: 'Fira Code', monospace;
@@ -225,7 +280,7 @@ footer{
     padding: 15px 30px;
 }
 .rodape a{
-    color: #585858;
+    color: var(--textcolor);
 }
 footer .rodape{
     display: flex;
@@ -284,6 +339,9 @@ footer .rodape{
         font-size: 20px;
         font-weight: 600;
         color: #000;
+    }
+    #carregando{
+        background-size: 10%;
     }
     footer .rodape{
         text-align: center;
