--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,23 +106,25 @@ header .return{
 /* estilo slides*/
 #sliders{
     width: 100%;
-    height: 80vh;
+    height: 90vh;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
 .swiper{
-    width: 60%;
-    height: fit-content;
+    width: 80%;
+    height: 90vh;
+    /*height: fit-content;*/
 }
 .swiper-slide img{
-    width: 100%;
-    height: 400px;
+    max-width: 100%;
+    height: auto;
 }
 .swiper .swiper-button-prev, 
 .swiper .swiper-button-next{
     color: var(--hovercolor);
+    margin: 0 30px;
 }
 .swiper .swiper-pagination-bullet-active{
     background: var(--hovercolor);
@@ -283,6 +285,8 @@ header .return{
     padding: 30px;
 }
 #about .container .conteudo img{
+    max-width: 300px;
+    height: 300px;
     border-radius: 50%;
 }
 #about .container .conteudo{
@@ -325,6 +329,9 @@ header .return{
 /* orcamento */
 #orcamento,
 #contato{
+    width: 100%;
+    height: 100%;
+    padding: 5% 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -335,8 +342,6 @@ header .return{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 100%;
-    height: 100%;
     padding: 2em;
 }
 #orcamento .content-orcamento{
@@ -359,8 +364,9 @@ header .return{
 #orcamento .pres li{
     list-style: none;
 }
-#orcamento .pres li img{
-    border-radius: 50%;
+#orcamento .pres img:hover{
+    filter: blur(4px);
+    transition: .30s;
 }
 #orcamento p{
     margin: 4em 0;
@@ -423,7 +429,7 @@ footer{
     font-size: 14px;
     font-family: 'Fira Code', monospace;
     width: 100%;
-    padding: 15px 30px;
+    padding: 15px 50px;
 }
 .rodape a{
     color: var(--textcolor);
